# cmake-xcode-openmp

./: CMakeLists.txt
